--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
     <title>Agar.io NN</title>
 
     <script src="https://cdn.rawgit.com/wagenaartje/neataptic/a7610e38/dist/neataptic.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
+
+  </head>
+  <body>
+    <h3>The following neural agents are a result of 1000+ generations of evolution</h3>
+    <p>If you have any remarks, or have managed to improve the evolution process, please make a post <a href="https://github.com/wagenaartje/neataptic/">here</a>. You can also perform a pull request on this repo.</p>
+    <div id="field" width="100%">
+    </div>
     <script src="libs/p5.js"></script>
 
     <script src="js/main.js"></script>
@@ -11,9 +19,5 @@
     <script src="js/player.js"></script>
     <script src="js/food.js"></script>
     <script src="js/field.js"></script>
-  </head>
-  <body>
-    <div id="field">
-    </div>
   </body>
 </html>
